[NAE-2381] Log in RestResponseExceptionHandler